# jsonify-objects

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
jsonify_objects/: __init__.py  core.py  main.py
tests/: test_core.py
